--- a/Pages/ResetPassword.cshtml
+++ b/Pages/ResetPassword.cshtml
@@ -16,7 +16,7 @@
         <input type="password" asp-for="password" />
     </div>
     <div>Re-enter password
-        <input type="retyped_password" asp-for="retyped_password" />
+        <input type="password" asp-for="retyped_password" />
     </div>
     <div><input type="submit" value="Reset Password"></div>
 </form>
