added issue details

--- a/Pages/Issue.cshtml
+++ b/Pages/Issue.cshtml
@@ -19,7 +19,12 @@
 
         <div>
             <label>Description</label>
-            <input asp-for="desc" value="@Model.desc"></input>
+            <input asp-for="description" value="@Model.description"></input>
+        </div>
+
+        <div>
+            <label>Details</label>
+            <textarea asp-for="details" value="@Model.details"></textarea>
         </div>
 
         <div>
