--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -5,6 +5,9 @@
     ViewData["Title"] = "Admin";
 }
 
+@{
+    Console.WriteLine("Admin response code:" + HttpContext.Response.StatusCode);
+}
 <h1>Admin</h1>
 
 
