--- a/Pages/Issue.cshtml
+++ b/Pages/Issue.cshtml
@@ -11,7 +11,7 @@
         <a href="Issues">Back to Issues</a>
     </div>
 
-    <form method="post">
+    <form class="issue_form" method="post">
         <div>
             <label>Id:</label>
             <input asp-for="id" value="@Model.id" disabled></input>
