--- a/Pages/Shared/_Layout_signed_out.cshtml
+++ b/Pages/Shared/_Layout_signed_out.cshtml
@@ -12,7 +12,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - @bd_config.get("AppName")</title>
-    <link rel="stylesheet" href="~/css/site_simple.css" />
+    <link rel="stylesheet" href="~/css/budoco.css" />
 </head>
 
 
