--- a/Pages/Register.cshtml
+++ b/Pages/Register.cshtml
@@ -13,7 +13,7 @@
 
 <partial name="_FlashPartial" />
 
-<form method="post">
+<form class="register_form" method="post">
     <div><label>Username</label>
         <input asp-for="username" />
     </div>
