--- a/Pages/ResetPasswordRequest.cshtml
+++ b/Pages/ResetPasswordRequest.cshtml
@@ -13,7 +13,7 @@
 
 <partial name="_FlashPartial" />
 
-<form method="post">
+<form class="reset_password_request_form" method="post">
     <div><label>Email you registered with:</label>
         <input asp-for="email" />
     </div>
