starting full text? blobs?

--- a/Pages/Shared/_Layout_signed_out.cshtml
+++ b/Pages/Shared/_Layout_signed_out.cshtml
@@ -31,8 +31,14 @@
     </div>
 
     <div class="render_body">
+
         @RenderBody()
     </div>
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 
 </html>
