--- a/Pages/Issue.cshtml
+++ b/Pages/Issue.cshtml
@@ -4,79 +4,110 @@
 @{
     ViewData["Title"] = "Issue";
 }
+
+<partial name="_FlashPartial" />
+
 <div>
-    <partial name="_FlashPartial" />
-
-    <div>
-        <a href="Issues">Back to Issues</a>
-    </div>
-
-    <form class="issue_form" method="post">
-        <div>
-            <label>Id:</label>
-            <input asp-for="id" value="@Model.id" disabled></input>
-        </div>
-
-        <div>
-            <label>Description</label>
-            <input asp-for="description" value="@Model.description" disabled="@Model.null_or_disabled"></input>
-        </div>
-
-        <div>
-            <label>Details</label>
-            <textarea asp-for="details" value="@Model.details" disabled="@Model.null_or_disabled"></textarea>
-        </div>
-
-        <div>
-            <label>Category</label>
-            <select asp-for="category_id" asp-items="@Model.categories" disabled="@Model.null_or_disabled">
-                <option value="">-- Select Category --</option>
-            </select>
-        </div>
-
-        <div>
-            <label>Project</label>
-            <select asp-for="project_id" asp-items="@Model.projects" disabled="@Model.null_or_disabled">
-                <option value="">-- Select Project --</option>
-            </select>
-        </div>
-
-        <div>
-            <label>Priority</label>
-            <select asp-for="priority_id" asp-items="@Model.priorities" disabled="@Model.null_or_disabled">
-                <option value="">-- Select Priority --</option>
-            </select>
-        </div>
-
-        <div>
-            <label>Status</label>
-            <select asp-for="status_id" asp-items="@Model.statuses" disabled="@Model.null_or_disabled">
-                <option value="">-- Select Status --</option>
-            </select>
-        </div>
-
-        <div>
-            <label>Assigned To</label>
-            <select asp-for="assigned_to_user_id" asp-items="@Model.assigned_to_users" disabled="@Model.null_or_disabled">
-                <option value="">-- Assign to --</option>
-            </select>
-        </div>
-
-        
-            @{
-                if (Model.null_or_disabled is null) 
-                {
-                    string button_text = (Model.id == 0) ? "Create" : "Update";
-                    <div>
-                    <button type="submit" >@button_text</button>
-                    </div>
-                }
-            }
-
-        
-    </form>
-
-    <div>
-        <a href="Issue?id=0">Clear and create another issue</a>
-    </div>
+    <a href="Issues">Back to Issues</a>
 </div>
+
+<form class="issue_form" method="post">
+    <input type="hidden" asp-for="form_name" value="issue_form" />
+
+    <div>
+        <label>Id:</label>
+        <input asp-for="id" value="@Model.id" disabled></input>
+    </div>
+
+    <div>
+        <label>Description</label>
+        <input asp-for="description" value="@Model.description" disabled="@Model.null_or_disabled"></input>
+    </div>
+
+    <div>
+        <label>Details</label>
+        <textarea asp-for="details" value="@Model.details" disabled="@Model.null_or_disabled"></textarea>
+    </div>
+
+    <div>
+        <label>Category</label>
+        <select asp-for="category_id" asp-items="@Model.categories" disabled="@Model.null_or_disabled">
+            <option value="">-- Select Category --</option>
+        </select>
+    </div>
+
+    <div>
+        <label>Project</label>
+        <select asp-for="project_id" asp-items="@Model.projects" disabled="@Model.null_or_disabled">
+            <option value="">-- Select Project --</option>
+        </select>
+    </div>
+
+    <div>
+        <label>Priority</label>
+        <select asp-for="priority_id" asp-items="@Model.priorities" disabled="@Model.null_or_disabled">
+            <option value="">-- Select Priority --</option>
+        </select>
+    </div>
+
+    <div>
+        <label>Status</label>
+        <select asp-for="status_id" asp-items="@Model.statuses" disabled="@Model.null_or_disabled">
+            <option value="">-- Select Status --</option>
+        </select>
+    </div>
+
+    <div>
+        <label>Assigned To</label>
+        <select asp-for="assigned_to_user_id" asp-items="@Model.assigned_to_users" disabled="@Model.null_or_disabled">
+            <option value="">-- Assign to --</option>
+        </select>
+    </div>
+
+
+    @{
+        if (Model.null_or_disabled is null)
+        {
+            string button_text = (Model.id == 0) ? "Create" : "Update";
+            <div>
+                <button type="submit">@button_text</button>
+            </div>
+        }
+    }
+
+
+</form>
+
+<div>
+    <a href="Issue?id=0">Clear and create another issue</a>
+</div>
+
+@{
+    if (Model.id != 0)
+    {
+
+        for (int row = 0; row < Model.dt_posts.Rows.Count; row++)
+        {
+            DataRow dr = Model.dt_posts.Rows[row];
+            <div class="post">
+                <div class="post_who_when">Posted by @dr["us_username"] on @dr["p_created_date"]</div>
+                <div class="xpost_text">
+                    <pre>@dr["p_text"]</pre>
+                </div>
+            </div>
+        }
+
+        <form class="post_form" method="post">
+            <input type="hidden" asp-for="form_name" value="post_form" />
+            <input type="hidden" asp-for="id" />
+
+            <div>
+                <textarea asp-for="post_text"></textarea>
+            </div>
+            <div>
+                <button type="submit">Comment</button>
+            </div>
+        </form>
+
+    }
+}
