--- a/Pages/Issue.cshtml
+++ b/Pages/Issue.cshtml
@@ -91,7 +91,7 @@
             DataRow dr = Model.dt_posts.Rows[row];
             <div class="post">
                 <div class="post_who_when">Posted by @dr["us_username"] on @dr["p_created_date"]</div>
-                <div class="xpost_text">
+                <div class="post_text">
                     <pre>@dr["p_text"]</pre>
                 </div>
             </div>
