--- a/Pages/ResetPasswordRequest.cshtml
+++ b/Pages/ResetPasswordRequest.cshtml
@@ -13,10 +13,13 @@
 
 <partial name="_FlashPartial" />
 
-<form class="reset_password_request_form" method="post">
-    <div><label>Email you registered with:</label>
-        <input asp-for="email" />
-    </div>
-    <div><button type="submit">Request Password Reset</button></div>
-</form>
+<div class="form-div">
+    <form class="reset_password_request_form" method="post">
+        <div><label>Email you registered with:</label>
+            <input asp-for="email" />
+        </div>
+        <div><button type="submit">Request Password Reset</button></div>
+    </form>
+</div>
+
 <div><a href="Login">Login</a></div>
