--- a/Pages/Issue.cshtml
+++ b/Pages/Issue.cshtml
@@ -11,72 +11,75 @@
     <a href="Issues">Back to Issues</a>
 </div>
 
-<form class="issue_form" method="post">
-    <input type="hidden" asp-for="form_name" value="issue_form" />
+<div class="form_div">
+    <form class="issue_form" method="post">
+        <input type="hidden" asp-for="form_name" value="issue_form" />
 
-    <div>
-        <label>Id:</label>
-        <input asp-for="id" value="@Model.id" disabled></input>
-    </div>
+        <div>
+            <label>Id:</label>
+            <input asp-for="id" value="@Model.id" disabled></input>
+        </div>
 
-    <div>
-        <label>Description</label>
-        <input asp-for="description" value="@Model.description" disabled="@Model.null_or_disabled"></input>
-    </div>
+        <div>
+            <label>Description</label>
+            <input asp-for="description" value="@Model.description" disabled="@Model.null_or_disabled"></input>
+        </div>
 
-    <div>
-        <label>Details</label>
-        <textarea asp-for="details" value="@Model.details" disabled="@Model.null_or_disabled"></textarea>
-    </div>
+        <div>
+            <label>Details</label>
+            <textarea asp-for="details" value="@Model.details" disabled="@Model.null_or_disabled"></textarea>
+        </div>
 
-    <div>
-        <label>Category</label>
-        <select asp-for="category_id" asp-items="@Model.categories" disabled="@Model.null_or_disabled">
-            <option value="">-- Select Category --</option>
-        </select>
-    </div>
+        <div>
+            <label>Category</label>
+            <select asp-for="category_id" asp-items="@Model.categories" disabled="@Model.null_or_disabled">
+                <option value="">-- Select Category --</option>
+            </select>
+        </div>
 
-    <div>
-        <label>Project</label>
-        <select asp-for="project_id" asp-items="@Model.projects" disabled="@Model.null_or_disabled">
-            <option value="">-- Select Project --</option>
-        </select>
-    </div>
+        <div>
+            <label>Project</label>
+            <select asp-for="project_id" asp-items="@Model.projects" disabled="@Model.null_or_disabled">
+                <option value="">-- Select Project --</option>
+            </select>
+        </div>
 
-    <div>
-        <label>Priority</label>
-        <select asp-for="priority_id" asp-items="@Model.priorities" disabled="@Model.null_or_disabled">
-            <option value="">-- Select Priority --</option>
-        </select>
-    </div>
+        <div>
+            <label>Priority</label>
+            <select asp-for="priority_id" asp-items="@Model.priorities" disabled="@Model.null_or_disabled">
+                <option value="">-- Select Priority --</option>
+            </select>
+        </div>
 
-    <div>
-        <label>Status</label>
-        <select asp-for="status_id" asp-items="@Model.statuses" disabled="@Model.null_or_disabled">
-            <option value="">-- Select Status --</option>
-        </select>
-    </div>
+        <div>
+            <label>Status</label>
+            <select asp-for="status_id" asp-items="@Model.statuses" disabled="@Model.null_or_disabled">
+                <option value="">-- Select Status --</option>
+            </select>
+        </div>
 
-    <div>
-        <label>Assigned To</label>
-        <select asp-for="assigned_to_user_id" asp-items="@Model.assigned_to_users" disabled="@Model.null_or_disabled">
-            <option value="">-- Assign to --</option>
-        </select>
-    </div>
+        <div>
+            <label>Assigned To</label>
+            <select asp-for="assigned_to_user_id" asp-items="@Model.assigned_to_users"
+                disabled="@Model.null_or_disabled">
+                <option value="">-- Assign to --</option>
+            </select>
+        </div>
 
 
-    @{
-        if (Model.null_or_disabled is null)
-        {
-            string button_text = (Model.id == 0) ? "Create" : "Update";
-            <div>
-                <button type="submit">@button_text</button>
-            </div>
+        @{
+            if (Model.null_or_disabled is null)
+            {
+                string button_text = (Model.id == 0) ? "Create" : "Update";
+                <div>
+                    <button type="submit">@button_text</button>
+                </div>
+            }
         }
-    }
 
 
-</form>
+    </form>
+</div>
 
 <div>
     <a href="Issue?id=0">Clear and create another issue</a>
@@ -97,17 +100,18 @@
             </div>
         }
 
-        <form class="post_form" method="post">
-            <input type="hidden" asp-for="form_name" value="post_form" />
-            <input type="hidden" asp-for="id" />
+        <div class="form_div">
+            <form class="post_form" method="post">
+                <input type="hidden" asp-for="form_name" value="post_form" />
+                <input type="hidden" asp-for="id" />
 
-            <div>
-                <textarea asp-for="post_text"></textarea>
-            </div>
-            <div>
-                <button type="submit">Comment</button>
-            </div>
-        </form>
-
+                <div>
+                    <textarea asp-for="post_text"></textarea>
+                </div>
+                <div>
+                    <button type="submit">Comment</button>
+                </div>
+            </form>
+        </div>
     }
 }
