--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -13,17 +13,19 @@
 
 <partial name="_FlashPartial" />
 
-<form class="login_form" method="post">
-    <div>
-        <label>Username or Email</label>
-        <input asp-for="username" />
-    </div>
-    <div>
-        <label>Password</label>
-        <input type="password" asp-for="password" />
-    </div>
-    <div><button type="submit">Login</button></div>
-</form>
+<div class="form_div">
+    <form class="login_form" method="post">
+        <div>
+            <label>Username or Email</label>
+            <input asp-for="username" />
+        </div>
+        <div>
+            <label>Password</label>
+            <input type="password" asp-for="password" />
+        </div>
+        <div><button type="submit">Login</button></div>
+    </form>
+</div>
 
 <div><a href="ResetPasswordRequest">Forgot Password?</a></div>
 
