--- a/Pages/Register.cshtml
+++ b/Pages/Register.cshtml
@@ -13,17 +13,20 @@
 
 <partial name="_FlashPartial" />
 
-<form class="register_form" method="post">
-    <div><label>Username</label>
-        <input asp-for="username" />
-    </div>
-    <div><label>Email</label>
-        <input type="email" asp-for="email" />
-    </div>
-    <div><label>Create a password</label>
-        <input type="password" asp-for="password" />
-    </div>
-    <div><button type="submit">Register</button></div>
-</form>
+<div class="form_div">
+    <form class="register_form" method="post">
+        <div><label>Username</label>
+            <input asp-for="username" />
+        </div>
+        <div><label>Email</label>
+            <input type="email" asp-for="email" />
+        </div>
+        <div><label>Create a password</label>
+            <input type="password" asp-for="password" />
+        </div>
+        <div><button type="submit">Register</button></div>
+    </form>
+</div>
+
 <div><a href="Login">Login</a></div>
 <div><a href="ResetPasswordRequest">Forgot Password?</a></div>
