--- a/Pages/Shared/_Layout_simple.cshtml
+++ b/Pages/Shared/_Layout_simple.cshtml
@@ -13,6 +13,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - @bd_config.get("AppName")</title>
     <link rel="stylesheet" href="~/css/budoco.css" />
+    <script>
+        function goto() {
+            var issue_id = $("#goto_id").val();
+            if (issue_id == 0)
+                alert("Enter issue id#")
+            else
+                location.href = "/Issue?id=" + issue_id
+        }
+    </script>
 </head>
 
 @{
@@ -46,9 +55,12 @@
                             </li>
                         }
                     }
-                    <!-- <li class="nav-item">
-                                                                                <a class="nav-link" asp-page="/Email">Email</a>
-                                                                            </li> -->
+
+                    <li class="nav-item">
+                        <button class="goto_button" onclick="goto()">Go To Issue:</button>
+                        <input type="number" class="goto_input" id="goto_id" placeholder="id#" />
+
+                    </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="/Login?action=signout">Sign Out</a>
