fixed ignore scripts

--- a/Pages/Admin/Email.cshtml
+++ b/Pages/Admin/Email.cshtml
@@ -24,3 +24,7 @@ result=@Model.email_result
         <div><input type="submit">Send</input></div>
     </form>
 </div>
+
+@section Scripts {
+    
+}
