--- a/Pages/Error.cshtml
+++ b/Pages/Error.cshtml
@@ -26,3 +26,7 @@
     <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
     and restarting the app.
 </p>
+
+@section Scripts {
+    
+}
