--- a/Pages/Register.cshtml
+++ b/Pages/Register.cshtml
@@ -30,3 +30,8 @@
 
 <div><a href="Login">Login</a></div>
 <div><a href="ResetPasswordRequest">Forgot Password?</a></div>
+
+@section Scripts {
+    
+}
+
