--- a/Pages/ResetPassword.cshtml
+++ b/Pages/ResetPassword.cshtml
@@ -21,3 +21,8 @@
     <div><input type="submit" value="Reset Password"></div>
 </form>
 <div><a href="Login">Login</a></div>
+
+@section Scripts {
+    
+}
+
